--- a/NueralNetworkPredictExercise.ipynb
+++ b/NueralNetworkPredictExercise.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "finite-struggle",
+   "execution_count": 379,
+   "id": "intellectual-spencer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 380,
    "id": "hawaiian-boring",
    "metadata": {},
    "outputs": [],
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "extraordinary-complexity",
+   "execution_count": 381,
+   "id": "extensive-grounds",
    "metadata": {},
    "outputs": [
     {
@@ -440,13 +440,16 @@
        "[1965 rows x 30 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create dataframe with 30 important features \n",
+    "\n",
+    "labels = all_data[[\"Participant\", \"Mean_total\", \"CV_total\", \"Time High (%)_total\", \"Time In Range (%)_total\", \"Time Low (%)_total\", \n",
+    "               \"Mean_nighttime\", \"Time Low (%)_nighttime\"]]\n",
     "thirty_classes = [\"Exercise_Duration_Total\", \"Exercise_METmin_Total\", \"Planned Day Off_binary\", \"Not Enough Time_binary\",\n",
     "              \"Lacked Positive Feelings_binary\", \"Had Negative Feelings_binary\", \"Lacked Energy_binary\", \n",
     "               \"Felt Fatigued_binary\", \"Blood sugar management issue_binary\", \"Sick\", \"Morning Fear of Hypoglycemia\",\n",
@@ -460,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "practical-familiar",
+   "execution_count": 382,
+   "id": "egyptian-croatia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,13 +473,16 @@
     "\n",
     "for class_name in glucose_classes:\n",
     "    df = df[df[class_name] != '.']\n",
-    "    df = df[df[class_name] != \"#DIV/0!\"]"
+    "    df = df[df[class_name] != \"#DIV/0!\"]\n",
+    "    labels = labels[labels[class_name] != '.']\n",
+    "    labels = labels[labels[class_name] != \"#DIV/0!\"]\n",
+    "labels = labels[[\"Participant\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "stone-feeling",
+   "execution_count": 383,
+   "id": "sitting-transcription",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +497,7 @@
        " nan}"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,8 +509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "brutal-priority",
+   "execution_count": 384,
+   "id": "inclusive-marshall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,8 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "chief-egyptian",
+   "execution_count": 385,
+   "id": "celtic-google",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +535,7 @@
        "{'.', '1', '2', '3', '4', '5', 'No diaries (baseline)'}"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "three-handy",
+   "execution_count": 386,
+   "id": "established-reunion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "polar-sapphire",
+   "execution_count": 452,
+   "id": "athletic-auckland",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +617,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 452,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,47 +631,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "injured-pound",
+   "execution_count": 458,
+   "id": "complicated-preservation",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.53559738, -0.47857716, -0.31831052, ...,  0.12172449,\n",
-       "        -0.71893585, -0.32549676],\n",
-       "       [-0.53559738, -0.47857716, -0.31831052, ...,  0.31237731,\n",
-       "        -0.83138864,  1.39806629],\n",
-       "       [-0.53559738, -0.47857716, -0.31831052, ...,  0.76785101,\n",
-       "        -0.26335788,  1.13290274],\n",
-       "       ...,\n",
-       "       [-0.53559738, -0.47857716, -0.31831052, ..., -0.53350241,\n",
-       "        -0.15506566, -0.32549676],\n",
-       "       [-0.53559738, -0.47857716, -0.31831052, ..., -0.53350241,\n",
-       "        -0.53367709, -0.32549676],\n",
-       "       [-0.53559738, -0.47857716, -0.31831052, ..., -0.53350241,\n",
-       "        -0.01851697, -0.32549676]])"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "data = df.to_numpy(dtype='float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 482,
+   "id": "subsequent-delay",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Standard scaling will convert the data to have a standard normal distrubtion.\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scale_features_std = StandardScaler()\n",
     "features_train = scale_features_std.fit_transform(df)\n",
-    "features_test = scale_features_std.transform(df)\n",
+    "features = scale_features_std.transform(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 460,
+   "id": "comfortable-terrorist",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision                             # contains image datasets and many functions to manipulate images\n",
+    "import torchvision.transforms as transforms    # to normalize, scale etc the dataset\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from torch.utils.data import DataLoader        # to load data into batches (for SGD)\n",
+    "from torchvision.utils import make_grid        # Plotting. Makes a grid of tensors\n",
+    "import matplotlib.pyplot as plt                # to plot our images\n",
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "id": "confused-publication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_x = []\n",
+    "my_y = []\n",
+    "for a in features:\n",
+    "    my_x.append(np.array(a))\n",
+    "for b in labels['Participant']:\n",
+    "    my_y.append([b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 492,
+   "id": "material-avenue",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor_x = torch.Tensor(my_x) # transform to torch tensor\n",
+    "tensor_y = torch.Tensor(my_y) # transform to torch tensor\n",
+    "batch_size = 2\n",
+    "my_dataset = TensorDataset(tensor_x,tensor_y) # create your datset\n",
+    "my_dataloader = DataLoader(my_dataset, batch_size=batch_size, shuffle=True) # create your dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 493,
+   "id": "second-negotiation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn                          # Class that implements a model (such as a Neural Network)\n",
+    "import torch.nn.functional as F                # contains activation functions, sampling layers etc\n",
+    "import torch.optim as optim                    # For optimization routines such as SGD, ADAM, ADAGRAD, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 494,
+   "id": "relative-opposition",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_hidden = 16        # Number of hidden units in the encoder. See AEVB paper page 7, section \"Marginal Likelihood\"\n",
+    "d_hidden = 16        # Number of hidden units in the decoder. See AEVB paper page 7, section \"Marginal Likelihood\"\n",
+    "latent_dim = 2        # Dimension of latent space. See AEVB paper, page 7, section \"Marginal Likelihood\"\n",
+    "learning_rate = 0.001 # For optimizer (SGD or Adam)\n",
+    "weight_decay = 1e-5   # For optimizer (SGD or Adam)\n",
+    "epochs = 50           # Number of sweeps through the whole dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 500,
+   "id": "dried-creativity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VAE(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Variational Auto-Encoder Class\"\"\"\n",
+    "        super(VAE, self).__init__()\n",
+    "        \n",
+    "        # Encoding Layers\n",
+    "        self.e_input2hidden = nn.Linear(in_features=30, out_features=e_hidden)\n",
+    "        self.e_hidden2mean = nn.Linear(in_features=e_hidden, out_features=latent_dim)\n",
+    "        self.e_hidden2logvar = nn.Linear(in_features=e_hidden, out_features=latent_dim)\n",
     "\n",
-    "features_test"
+    "        # Decoding Layers\n",
+    "        self.d_latent2hidden = nn.Linear(in_features=latent_dim, out_features=d_hidden)\n",
+    "        self.d_hidden2image = nn.Linear(in_features=d_hidden, out_features=30)\n",
+    "\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # Shape Flatten image to [batch_size, input_features]\n",
+    "        x = x.view(-1, 30)\n",
+    "        \n",
+    "        # Feed x into Encoder to obtain mean and logvar\n",
+    "        x = F.relu(self.e_input2hidden(x))\n",
+    "        mu, logvar = self.e_hidden2mean(x), self.e_hidden2logvar(x)\n",
+    "        \n",
+    "        # Sample z from latent space using mu and logvar\n",
+    "        if self.training:\n",
+    "            z = torch.randn_like(mu).mul(torch.exp(0.5*logvar)).add_(mu)\n",
+    "        else:\n",
+    "            z = mu\n",
+    "        \n",
+    "        # Feed z into Decoder to obtain reconstructed image. Use Sigmoid as output activation (=probabilities)\n",
+    "        x_recon = torch.sigmoid(self.d_hidden2image(torch.relu(self.d_latent2hidden(z))))\n",
+    "        \n",
+    "        return x_recon, mu, logvar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 501,
+   "id": "automatic-enterprise",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loss\n",
+    "def vae_loss(image, reconstruction, mu, logvar):\n",
+    "    # Binary Cross Entropy for batch\n",
+    "    BCE = F.binary_cross_entropy(input=reconstruction.view(-1, 30), target=image.view(-1, 30), reduction='sum')\n",
+    "    # Closed-form KL Divergence\n",
+    "    KLD = 0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    return BCE - KLD\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 502,
+   "id": "level-operation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VAE(\n",
+       "  (e_input2hidden): Linear(in_features=30, out_features=16, bias=True)\n",
+       "  (e_hidden2mean): Linear(in_features=16, out_features=2, bias=True)\n",
+       "  (e_hidden2logvar): Linear(in_features=16, out_features=2, bias=True)\n",
+       "  (d_latent2hidden): Linear(in_features=2, out_features=16, bias=True)\n",
+       "  (d_hidden2image): Linear(in_features=16, out_features=30, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 502,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Instantiate VAE with Adam optimizer\n",
+    "vae = VAE()\n",
+    "optimizer = optim.Adam(params=vae.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
+    "vae.train()            # tell the network to be in training mode. Useful to activate Dropout layers & other stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 503,
+   "id": "comic-jefferson",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1 / 50] average reconstruction error: -39.694299\n",
+      "Epoch [2 / 50] average reconstruction error: -252.622801\n",
+      "Epoch [3 / 50] average reconstruction error: -355.395301\n",
+      "Epoch [4 / 50] average reconstruction error: -421.771513\n",
+      "Epoch [5 / 50] average reconstruction error: -471.316629\n",
+      "Epoch [6 / 50] average reconstruction error: -511.179231\n",
+      "Epoch [7 / 50] average reconstruction error: -548.396109\n",
+      "Epoch [8 / 50] average reconstruction error: -587.144404\n",
+      "Epoch [9 / 50] average reconstruction error: -619.934631\n",
+      "Epoch [10 / 50] average reconstruction error: -653.455774\n",
+      "Epoch [11 / 50] average reconstruction error: -678.968237\n",
+      "Epoch [12 / 50] average reconstruction error: -705.239102\n",
+      "Epoch [13 / 50] average reconstruction error: -734.869038\n",
+      "Epoch [14 / 50] average reconstruction error: -757.343582\n",
+      "Epoch [15 / 50] average reconstruction error: -780.200760\n",
+      "Epoch [16 / 50] average reconstruction error: -804.311627\n",
+      "Epoch [17 / 50] average reconstruction error: -815.313085\n",
+      "Epoch [18 / 50] average reconstruction error: -831.446719\n",
+      "Epoch [19 / 50] average reconstruction error: -854.020825\n",
+      "Epoch [20 / 50] average reconstruction error: -863.142386\n",
+      "Epoch [21 / 50] average reconstruction error: -883.523963\n",
+      "Epoch [22 / 50] average reconstruction error: -904.528144\n",
+      "Epoch [23 / 50] average reconstruction error: -914.733437\n",
+      "Epoch [24 / 50] average reconstruction error: -940.929116\n",
+      "Epoch [25 / 50] average reconstruction error: -949.482237\n",
+      "Epoch [26 / 50] average reconstruction error: -964.457664\n",
+      "Epoch [27 / 50] average reconstruction error: -976.656719\n",
+      "Epoch [28 / 50] average reconstruction error: -992.585467\n",
+      "Epoch [29 / 50] average reconstruction error: -1015.781680\n",
+      "Epoch [30 / 50] average reconstruction error: -1026.406436\n",
+      "Epoch [31 / 50] average reconstruction error: -1036.868776\n",
+      "Epoch [32 / 50] average reconstruction error: -1055.854476\n",
+      "Epoch [33 / 50] average reconstruction error: -1063.456257\n",
+      "Epoch [34 / 50] average reconstruction error: -1068.004197\n",
+      "Epoch [35 / 50] average reconstruction error: -1087.277049\n",
+      "Epoch [36 / 50] average reconstruction error: -1097.095770\n",
+      "Epoch [37 / 50] average reconstruction error: -1106.244180\n",
+      "Epoch [38 / 50] average reconstruction error: -1114.521113\n",
+      "Epoch [39 / 50] average reconstruction error: -1122.769974\n",
+      "Epoch [40 / 50] average reconstruction error: -1129.493831\n",
+      "Epoch [41 / 50] average reconstruction error: -1137.857160\n",
+      "Epoch [42 / 50] average reconstruction error: -1143.517469\n",
+      "Epoch [43 / 50] average reconstruction error: -1151.705616\n",
+      "Epoch [44 / 50] average reconstruction error: -1163.594999\n",
+      "Epoch [45 / 50] average reconstruction error: -1162.500173\n",
+      "Epoch [46 / 50] average reconstruction error: -1170.977960\n",
+      "Epoch [47 / 50] average reconstruction error: -1179.310206\n",
+      "Epoch [48 / 50] average reconstruction error: -1182.017276\n",
+      "Epoch [49 / 50] average reconstruction error: -1196.237583\n",
+      "Epoch [50 / 50] average reconstruction error: -1192.969459\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train\n",
+    "losses = []\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    # Store training losses & instantiate batch counter\n",
+    "    losses.append(0)\n",
+    "    number_of_batches = 0\n",
+    "\n",
+    "    # Grab the batch, we are only interested in images not on their labels\n",
+    "    for images, _ in my_dataloader:\n",
+    "        # Save batch to GPU, remove existing gradients from previous iterations\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Feed images to VAE. Compute Loss.\n",
+    "        reconstructions, latent_mu, latent_logvar = vae(images)\n",
+    "        loss = vae_loss(images, reconstructions, latent_mu, latent_logvar)\n",
+    "\n",
+    "        # Backpropagate the loss & perform optimization step with such gradients\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Add loss to the cumulative sum\n",
+    "        losses[-1] += loss.item()  \n",
+    "        number_of_batches += 1\n",
+    "\n",
+    "    # Update average loss & Log information\n",
+    "    losses[-1] /= number_of_batches\n",
+    "    print('Epoch [%d / %d] average reconstruction error: %f' % (epoch+1, epochs, losses[-1]))    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "terminal-pennsylvania",
+   "id": "enormous-stack",
    "metadata": {},
    "outputs": [],
    "source": []
